# amnezia-portmaster

./: .gitignore  Dockerfile  Dockerfile.old  LICENSE  README.md  apply_portmaster_net_rules.sh  compile-install.bat  deploy.sh  docker-compose.yaml  install.py  portmaster-flet-installer.py  portmaster-install.py  portmaster-install.spec  pyproject.toml
app/: main.py  portmaster_daemon.py
app/api/: models.py
app/core/: config.py
app/services/: portmaster_service.py
app/system/: iptables.py  scanner.py
client/: portmaster-client.ps1  portmaster-client.sh  portmaster.conf  portmaster.conf.bak  run_client.bat
client/mac/: agent_template.plist
installer/: deploy.py  installer_app.py  requirements.txt  setup_ubuntu.sh
installer/locales/en/: main.ftl
installer/locales/ru/: main.ftl
portmaster/: ovpn-client-disconnect.sh  portmaster.sh  wg-client-disconnect.sh
scripts/: run-portmaster.sh  test_api.sh
