[project]
name = "amnezia-portmaster"
version = "0.1.0"
description = "PortMaster for amnezia vpn"
authors = [
    { name = "pro_to", email = "end0rfin@protonmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "flet[all]==0.28.2",
    "fluent-runtime>=0.4.0",
    "paramiko",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
]

[tool.uv]
