[project]
name = "amnezia-portmaster"
version = "0.1.0"
description = "PortMaster for amnezia vpn"
authors = [
    { name = "pro_to", email = "end0rfin@protonmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "flet[all]==0.28.2",
    "fluent-runtime>=0.4.0",
    "paramiko",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
]

[tool.uv]
